--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint-plugin-react": "^7.21.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
+    "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
     "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
