--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
     "axios": "^0.21.1",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-react": "^7.21.5",
     "firebase": "^8.6.7",
+    "global": "^4.4.0",
     "json-server": "^0.16.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,12 +23,13 @@
     "react-toastify": "^7.0.4",
     "styled-components": "^5.3.0",
     "uuid": "^8.3.2",
+    "vercel": "^23.0.0",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "json-server server.json -p 3333"
@@ -57,6 +58,7 @@
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@types/uuid": "^8.3.0",
     "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
